--- a/index.html
+++ b/index.html
@@ -3,13 +3,17 @@
 
 <head>
     <meta charset="utf-8">
+    <link href="CSS.css" rel="stylesheet" type="text/css" /> 
     <script src="jquery.js"></script>
     <title>Aminor-z</title>
 </head>
 
 <body>
-    <script type="text/javascript" src="canvas-nest.js"></script>
-    <canvas id="c_n1"></canvas>
+    
+    <section class="front-section">
+    <div class="panel-shell" style="width:20%;height:300px;z-index:100;"></div>   
+    </section>
+    <script  type="text/javascript" src="canvas-nest.js"></script>
 </body>
 
 </html>
